2009-04-16	The InnoDB Team

	* CMakeLists.txt, include/os0sync.h, include/sync0sync.h,
	include/sync0sync.ic, include/univ.i, srv/srv0start.c,
	sync/sync0sync.c:
	Use the Windows Interlocked functions for atomic memory
	access.

2009-04-15	The InnoDB Team

	* mysql-test/innodb.result, mysql-test/innodb.test:
	Fix Bug#43309 Test main.innodb can't be run twice

2009-04-14	The InnoDB Team

	* CMakeLists.txt, handler/win_delay_loader.cc,
	win-plugin/win-plugin.diff:
	Remove statically linked libraries from MySQL (zlib and strings).

2009-04-11	The InnoDB Team

	* CMakeLists.txt, win-plugin/README, win-plugin/win-plugin.diff:
	Rewrite CMakeLists.txt.

2009-04-07	The InnoDB Team

	* include/os0sync.h, include/sync0rw.ic, include/sync0sync.h,
	include/sync0sync.ic, include/univ.i, plug.in, srv/srv0srv.c,
	srv/srv0start.c, sync/sync0arr.c, sync/sync0sync.c:
	Enable atomics on Solaris (using the libc functions as defined in
	atomic.h) if GCC atomic builtins are not present.

2009-04-07	The InnoDB Team

	* btr/btr0btr.c, dict/dict0dict.c, ibuf/ibuf0ibuf.c,
	include/data0data.h, include/data0data.ic, include/data0type.h,
	include/data0type.ic, include/dict0dict.h, include/dict0dict.ic,
	include/rem0rec.ic, mysql-test/innodb.result, mysql-test/innodb.test,
	pars/pars0pars.c, rem/rem0rec.c, row/row0upd.c:
	Fix Bug#44032 In ROW_FORMAT=REDUNDANT, update UTF-8 CHAR
	to/from NULL is not in-place

2009-04-07	The InnoDB Team

	* page/page0cur.c:
	Fix Bug#43660 SHOW INDEXES/ANALYZE does NOT update cardinality for
	indexes of InnoDB table

2009-04-06	The InnoDB Team

	* handler/ha_innodb.cc:
	Make the parameter innodb_change_buffering settable by the
	configuration file or mysqld command line options. Before this
	fix, the initial value specified for this parameter was ignored.

2009-04-06	The InnoDB Team

	* sync/sync0rw.c:
	Avoid a bogus failure in UNIV_SYNC_DEBUG diagnostics.

2009-04-02	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h, srv/srv0srv.c: